--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Autoplay</title>
+    <title>Camilay</title>
 </head>
 <body>
     <audio autoplay>
-        <source src="https://drive.google.com/file/d/1xVFyssG-c0Y2OvbxyZTUnJ6vSMT_d_IG/view?usp=drive_link" type="audio/mpeg">
+        <source src="https://drive.google.com/file/d/1xVFyssG-c0Y2OvbxyZTUnJ6vSMT_d_IG/view?usp=drive_link" type="audio/mp3">
         Tu navegador no soporta reproducción automática.
     </audio>
 </body>
