--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <audio autoplay>
-        <source src="https://drive.google.com/uc?export=download&id=1xVFyssG-c0Y2OvbxyZTUnJ6vSMT_d_IG" type="audio/mpg">
+        <source src="https://drive.google.com/uc?export=download&id=1xVFyssG-c0Y2OvbxyZTUnJ6vSMT_d_IG" type="audio/mpeg">
         Tu navegador no soporta reproducción automática.
     </audio>
 </body>
