--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camila</title>
+    <title>Audio Autoplay</title>
 </head>
 <body>
     <audio autoplay>
         <source src="https://drive.google.com/uc?export=download&id=1xVFyssG-c0Y2OvbxyZTUnJ6vSMT_d_IG" type="audio/mpeg">
-        Tu navegador no soporta reproducción automática.
+        Your browser does not support the audio element.
     </audio>
 </body>
 </html>
